src/tests/function-declarations/2.txt
function-declarations/2.c:0:1: error: no main function defined
 
 ^
function-declarations/2.c:5:1: error: redefinition of function 'f'
 int f(int a, int b) {
 ^
